--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@gravity-ui/date-components": "^3.3.0",
+		"@gravity-ui/date-utils": "^2.5.6",
 		"@gravity-ui/navigation": "^3.7.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^7.9.1"
 	},
 	"devDependencies": {
-		"@gravity-ui/uikit": "^7.23.0",
 		"@eslint/js": "^9.36.0",
+		"@gravity-ui/icons": "^2.16.0",
+		"@gravity-ui/uikit": "^7.23.0",
 		"@types/react": "^19.1.13",
 		"@types/react-dom": "^19.1.9",
 		"@vitejs/plugin-react": "^5.0.3",
