--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@gravity-ui/date-components": "^3.3.0",
-		"@gravity-ui/date-utils": "^2.5.6",
-		"@gravity-ui/navigation": "^3.7.0",
+		"@gravity-ui/date-utils": "^2.6.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-router-dom": "^7.9.1"
+		"react-router-dom": "^7.9.1",
+		"uuid": "^13.0.0",
+		"zustand": "^5.0.8"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.36.0",
+		"@gravity-ui/date-components": "^3.3.2",
 		"@gravity-ui/icons": "^2.16.0",
+		"@gravity-ui/navigation": "^3.7.0",
 		"@gravity-ui/uikit": "^7.23.0",
 		"@types/react": "^19.1.13",
 		"@types/react-dom": "^19.1.9",
