--- a/package.json
+++ b/package.json
@@ -10,28 +10,33 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@gravity-ui/date-utils": "^2.6.0",
-		"react": "^18.3.1",
-		"react-dom": "^18.3.1",
-		"react-router-dom": "^7.9.1",
-		"uuid": "^13.0.0",
-		"zustand": "^5.0.8"
+		"@gravity-ui/dashkit": "^9.1.1",
+		"@gravity-ui/date-utils": "2.6.0",
+		"react": "18.3.1",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
+		"react-dom": "18.3.1",
+		"react-router-dom": "7.9.1",
+		"uuid": "13.0.0",
+		"zustand": "5.0.8"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.36.0",
-		"@gravity-ui/date-components": "^3.3.2",
-		"@gravity-ui/icons": "^2.16.0",
-		"@gravity-ui/navigation": "^3.7.0",
+		"@eslint/js": "9.36.0",
+		"@gravity-ui/date-components": "3.3.2",
+		"@gravity-ui/icons": "2.16.0",
+		"@gravity-ui/navigation": "3.7.0",
 		"@gravity-ui/uikit": "^7.23.0",
-		"@types/react": "^19.1.13",
-		"@types/react-dom": "^19.1.9",
-		"@vitejs/plugin-react": "^5.0.3",
-		"eslint": "^9.36.0",
-		"eslint-plugin-react-hooks": "^5.2.0",
-		"eslint-plugin-react-refresh": "^0.4.20",
-		"globals": "^16.4.0",
-		"typescript": "~5.8.3",
-		"typescript-eslint": "^8.44.0",
-		"vite": "^7.1.7"
+		"@types/react": "19.1.13",
+		"@types/react-dom": "19.1.9",
+		"@vitejs/plugin-react": "5.0.3",
+		"babel-plugin-react-compiler": "^19.1.0-rc.3",
+		"eslint": "9.36.0",
+		"eslint-plugin-react-hooks": "5.2.0",
+		"eslint-plugin-react-refresh": "0.4.20",
+		"globals": "16.4.0",
+		"react-compiler-runtime": "^19.1.0-rc.3",
+		"typescript": "5.8.3",
+		"typescript-eslint": "8.44.0",
+		"vite": "7.1.7"
 	}
 }
