--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
 	"dependencies": {
 		"@gravity-ui/dashkit": "^9.1.1",
 		"@gravity-ui/date-utils": "2.6.0",
+		"@reduxjs/toolkit": "^2.9.0",
 		"react": "18.3.1",
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "18.3.1",
+		"react-redux": "^9.2.0",
 		"react-router-dom": "7.9.1",
+		"react-saga": "^0.3.1",
 		"uuid": "13.0.0",
 		"zustand": "5.0.8"
 	},
