--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Logs
 logs
-.env
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -12,6 +11,9 @@ node_modules
 dist
 dist-ssr
 *.local
+*.env
+.env
+
 
 # Editor directories and files
 .vscode/*
