--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/modifiers": "^9.0.0",
+		"@dnd-kit/sortable": "^10.0.0",
 		"@gravity-ui/dashkit": "^9.1.1",
 		"@gravity-ui/date-utils": "2.6.0",
 		"@reduxjs/toolkit": "^2.9.0",
